# solo-oss-demo

./: .gitignore  Makefile.am  Makefile.in  README  README.md  aclocal.m4  config.h  config.h.in  config.status  config.sub  configure  configure.ac  libtool
assets/: Makefile.am  background.psd  make-icons.sh  solo-oss-demo.desktop  solo-oss-demo.icns  solo-oss-demo.psd
include/: so_hello.h  solo_basic.h  solo_ui_config.h
intl/: so_hello_zh_CN.po
pkgs/debian/: changelog  control  copyright  rules
pkgs/mac/: Info.plist
pkgs/mingw/: inno-setup.iss  nsis-setup.nsi
pkgs/rpm/: solo-oss-demo.spec  solo.spec
scripts/: find-mingw-dll.sh  make-dmg-pkg.sh  make-mingw-inno-installer.sh  make-mingw-nsis-installer.sh  make-rpm-pkg.sh  recollect_pot.sh
src/: MainWindow.cpp  MainWindow.h  Makefile.am  Makefile.in  NavigationView.cpp  NavigationView.h  WebEngineView.cpp  WebEngineView.h  WebView.cpp  WebView.h  hello.c  main.c  so_gui.cpp  so_hello.po  so_hello_en_GB.po  solo-hello  solo-navi-viewer  solo-oss-demo.rc  solo-oss-demo.res  solo_basic.c  solo_gui.c  solo_hello.c  solo_navi_viewer.cpp
src/.deps/: hello.Plo  main.Po  so_hello_gui-so_gui.Po
src/.libs/: libsohello.lai  libsohello.so.0  libsohello.so.0.0.0  lt-so_hello  so_hello
src/html/: baidu-map.html
src/share/solo-oss-demo/html/: baidu-map.html
src/share/solo-oss-demo/intl/: solo-oss-demo_zh_CN.po
src/share/solo-oss-demo/theme/: default.qss
