AC_INIT([so-hello], [1.0], [solo_lxy@126.com])
AM_INIT_AUTOMAKE([-Wall -Werror foreign])

AM_PROG_AR

AC_PROG_CC
#AC_PROG_RANLIB
AC_PROG_LIBTOOL
AC_PROG_CXX


AC_CONFIG_HEADERS([config.h])
AC_CONFIG_FILES([
	Makefile
	src/Makefile
])

AC_OUTPUT


AC_MSG_RESULT([])
AC_MSG_RESULT([========================================================================])



AC_MSG_RESULT([========================================================================])


